--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
       <span class="name">Visits</span>
       <span class="value" id="visit-count">0</span>
       <span class="name">Money</span>
-      <span class="value">$0</span>
+      <span class="value">$0</span> |
+      <span class="name">DCs</span>
+      <span class="value">0</span>
+      <span class="name">Racks</span>
+      <span class="value">0</span>
+      <span class="name">Servers</span>
+      <span class="value">0</span>
+      <span class="name">VMs</span>
+      <span class="value">0</span> |
+      <span class="name">CPUs</span>
+      <span class="value">0</span>
+      <span class="name">Memory</span>
+      <span class="value">0MB</span>
     </div>
     <div class="root">
       <div class="traffic">
