Add racks, servers, VMs, and start of traffic logic.

--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
       <span class="name">Visits</span>
       <span class="value" id="visit-count">0</span>
       <span class="name">Money</span>
-      <span class="value">$0</span> |
+      <span class="value" id="money-count">$0</span> |
       <span class="name">DCs</span>
-      <span class="value">0</span>
+      <span class="value" id="dc-count">0</span>
       <span class="name">Racks</span>
-      <span class="value">0</span>
+      <span class="value" id="rack-count">0</span>
       <span class="name">Servers</span>
-      <span class="value">0</span>
+      <span class="value" id="server-count">0</span>
       <span class="name">VMs</span>
-      <span class="value">0</span> |
+      <span class="value" id="vm-count">0</span> |
       <span class="name">CPUs</span>
-      <span class="value">0</span>
+      <span class="value" id="cpu-count">0</span>
       <span class="name">Memory</span>
-      <span class="value">0MB</span>
+      <span class="value" id="memory-count">0GB</span>
+      <span class="name">Storage</span>
+      <span class="value" id="storage-count">0GB</span>
     </div>
     <div class="root">
       <div class="traffic">
@@ -34,34 +36,13 @@
         </div>
         <div class="access-logs-header">Traffic Logs</div>
         <div class="access-logs">
-          <div class="container">
-            <div class="pre">GET  /index.html</div>
-            <div class="pre">POST /api/login</div>
-          </div>
+          <div class="container"></div>
         </div>
       </div>
       <div class="game">
         <div class="infrastructure">
           <div class="header">Your Infrastructure</div>
-          <div class="server-name">server001</div>
-          <div class="server">
-            <div class="vm">web001</div>
-            <div class="vm empty">&nbsp;</div>
-            <div class="vm empty">&nbsp;</div>
-            <div class="vm empty">&nbsp;</div>
-            <div class="vm empty">&nbsp;</div>
-            <div class="vm empty">&nbsp;</div>
-          </div>
-          <div class="server-name">server002</div>
-          <div class="server">
-              <div class="vm empty">&nbsp;</div>
-              <div class="vm empty">&nbsp;</div>
-              <div class="vm">cdn001</div>
-              <div class="vm empty">&nbsp;</div>
-              <div class="vm empty">&nbsp;</div>
-              <div class="vm empty">&nbsp;</div>
-            </div>
-        </div>
+          <div class="container"></div>
       </div>
     </div>
     <script>
