--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="stats">
       <strong>mySaaS</strong> |
-      <span class="name">Visits</span>
-      <span class="value" id="visit-count">0</span>
+      <span class="name">Hits</span>
+      <span class="value" id="hit-count">0</span>
       <span class="name">Money</span>
       <span class="value" id="money-count">$0</span> |
       <span class="name">DCs</span>
@@ -27,7 +27,9 @@
       <span class="name">Memory</span>
       <span class="value" id="memory-count">0GB</span>
       <span class="name">Storage</span>
-      <span class="value" id="storage-count">0GB</span>
+      <span class="value" id="storage-count">0GB</span> |
+      <span class="name">Req/s</span>
+      <span class="value" id="rps-count">0</span>
     </div>
     <div class="root">
       <div class="traffic">
@@ -40,8 +42,11 @@
         </div>
       </div>
       <div class="game">
+        <div class="header">
+          <div class="left">Your Infrastructure</div>
+          <div class="right"><span class="selected">Infrastructure</span> | DataCenter | Bank</div>
+        </div>
         <div class="infrastructure">
-          <div class="header">Your Infrastructure</div>
           <div class="container"></div>
       </div>
     </div>
